@@ -56,6 +56,9 @@ object_template = fanstatic.Resource(
 boolean_template = fanstatic.Resource(
     library, 'gocept_jsform_templates_boolean.pt', renderer=template_renderer)
 
+number_template = fanstatic.Resource(
+    library, 'gocept_jsform_templates_number.pt', renderer=template_renderer)
+
 radio_list_template = fanstatic.Resource(
     library, 'gocept_jsform_templates_radio_list.pt',
     renderer=template_renderer)
@@ -70,7 +73,7 @@ wrapper_template = fanstatic.Resource(
 
 templates = fanstatic.Group([
     form_template, string_template, text_template,
-    object_template, boolean_template, radio_list_template,
+    object_template, boolean_template, number_template, radio_list_template,
     multiselect_template, wrapper_template])
 
 jsform = fanstatic.Resource(
