@@ -19,6 +19,7 @@
     "gocept_jsform_templates_field_wrapper.pt",
     "gocept_jsform_templates_form.pt",
     "gocept_jsform_templates_multiselect.pt",
+    "gocept_jsform_templates_number.pt",
     "gocept_jsform_templates_object.pt",
     "gocept_jsform_templates_radio_list.pt",
     "gocept_jsform_templates_string.pt",
